<resources>
    <string name="app_name">TaxiMap</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_map">Mapa</string>
    <string name="desconectar">Salir</string>
    <string name="estado">Estado</string>
    <string name="firma">KSB SOLUCIONES\nAntonio Callisaya Tiñini</string>
    <string name="recordar">Recordar Usuario y Contraseña</string>
    <string name="olvidar">Olvidar usuario y Contraseña</string>
</resources>
