<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_no_guardado"
        android:layout_margin="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_us">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:id="@+id/user"
                android:inputType="textAutoComplete"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_pass">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/pass"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="10dp">

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="24dp"
                android:id="@+id/check_login"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/texto_recordar"
                android:text="@string/recordar"/>


        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondeado"
            android:text="@string/aceptar"
            android:id="@+id/loguear"
            android:layout_margin="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="9sp"
            android:textAlignment="center"
            android:text="@string/firma"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        android:id="@+id/login_guardado"
        android:visibility="gone"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/usuario_recordado"
            android:layout_margin="10dp"
            android:text="Usuario: "/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_margin="24dp"
            android:id="@+id/loguear_recordado"
            android:background="@drawable/boton_redondeado"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="9sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:id="@+id/olvidar"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/olvidar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="9sp"
            android:textAlignment="center"
            android:text="@string/firma"/>


    </LinearLayout>

</RelativeLayout>